--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repo containts my solution for Project Euler problems (see http://projecteuler.net/).
+This repo containts my solutions for Project Euler problems (see http://projecteuler.net/).
